[package]
name = "bevy-game"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/colorfulparadox/bevy-game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"

#[dependencies.dev]
#colored = "2.0.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3

[profile.release.package."*"]
opt-level = 3
